Eliminate BigDecimal from the stack